--- a/{{cookiecutter.directory_name}}/package.json
+++ b/{{cookiecutter.directory_name}}/package.json
@@ -2,7 +2,7 @@
   "name": "{{cookiecutter.directory_name}}",
   "version": "0.0.0",
   "description": "{{cookiecutter.project_description}}",
-  "repository": "git@github.com:{{cookiecutter.github_org}}/{{cookiecutter.project_slug}}.git",
+  "repository": "git@github.com:{{cookiecutter.github_owner}}/{{cookiecutter.project_slug}}.git",
   "author": "{{cookiecutter.full_name}} <{{cookiecutter.email}}>",
   "license": "CC-BY-NC-ND-4.0"
 }
