--- a/.github/workflows/changesets-release.yml
+++ b/.github/workflows/changesets-release.yml
@@ -44,7 +44,7 @@ jobs:
 
       # we use ourself to get the information for the release
       - name: Get Change Info
-        uses: ./
+        uses: chizovation/changesets-changelog-info@0.1.2
         id: get-changelog-info
 
       - name: Push Tags
