--- a/.github/workflows/assign-pr.yml
+++ b/.github/workflows/assign-pr.yml
@@ -11,6 +11,7 @@ permissions:
 
 jobs:
   assign-author:
+    name: Assign Author
     runs-on: ubuntu-latest
     steps:
       - uses: toshimaru/auto-author-assign@v1.6.2
