chore: update the 'nice name' of the labeler job

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   labeler:
-    name: Labeler
+    name: Add Labels to PRs
     runs-on: ubuntu-latest
     steps:
       - uses: fuxingloh/multi-labeler@v2
