--- a/.github/workflows/assign-pr.yml
+++ b/.github/workflows/assign-pr.yml
@@ -1,6 +1,6 @@
 ---
 # .github/workflows/auto-author-assign.yml
-name: Auto Author Assign
+name: PR Owner
 
 # yamllint disable-line rule:truthy
 on:
