--- a/{{cookiecutter.project_slug}}/.github/workflows/assign-pr.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/assign-pr.yml
@@ -1,6 +1,6 @@
 ---
 # .github/workflows/auto-author-assign.yml
-name: Auto Author Assign
+name: PR Owner
 
 # yamllint disable-line rule:truthy
 on:
@@ -11,6 +11,7 @@ permissions:
 
 jobs:
   assign-author:
+    name: Assign Author
     runs-on: ubuntu-latest
     steps:
       - uses: toshimaru/auto-author-assign@v1.6.2
