chore: render all files without exception
- escape all curly braces in github workflows
- remove _copy_without_render from cookiecutter.json

--- a/{{cookiecutter.project_slug}}/.github/workflows/commit-sanity-checks.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/commit-sanity-checks.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Block Autosquash Commits
         uses: xt0rted/block-autosquash-commits-action@v2
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: $\{\{ secrets.GITHUB_TOKEN }}
