--- a/{{cookiecutter.project_slug}}/.github/workflows/changesets-release.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/changesets-release.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - main
 
-concurrency: ${{ github.workflow }}-${{ github.ref }}
+concurrency: $\{\{ github.workflow }}-$\{\{ github.ref }}
 
 permissions: read-all
 
@@ -24,7 +24,7 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
         with:
-          token: ${{ secrets.CHANGESETS_TOKEN }}
+          token: $\{\{ secrets.CHANGESETS_TOKEN }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -38,7 +38,7 @@ jobs:
         id: changesets
         uses: changesets/action@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.CHANGESETS_TOKEN }}
+          GITHUB_TOKEN: $\{\{ secrets.CHANGESETS_TOKEN }}
         with:
           title: Release Changeset (bake CHANGELOG.md)
 
@@ -51,9 +51,11 @@ jobs:
         # https://github.com/changesets/action#custom-publishing
         if: steps.changesets.outputs.hasChangesets == 'false'
         shell: bash
+        # yamllint disable rule:line-length
         run: |
-          git tag ${{ steps.get-changelog-info.outputs.last-change-version-v }}
+          git tag $\{\{ steps.get-changelog-info.outputs.last-change-version-v }}
           # this could fail in a merge without changesets
           # (e.g. update README.md, merge)
           # but that's a bit naughty anyway, so we'll let it fail
           git push --tags
+        # yamllint enable rule:line-length
