--- a/.github/workflows/commit-sanity-checks.yml
+++ b/.github/workflows/commit-sanity-checks.yml
@@ -1,7 +1,7 @@
 ---
 name: Commit Sanity Checks
 
-# yamllint disable rule:truthy
+# yamllint disable-line rule:truthy
 on:
   pull_request:
     branches:
