--- a/{{cookiecutter.project_slug}}/.github/workflows/github-release.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/github-release.yml
@@ -28,9 +28,10 @@ jobs:
         # only run if we have a changelog entry
         if: steps.get-changelog-info.outputs.last-change-entry != ''
         with:
-          body: $\{\{ steps.get-changelog-info.outputs.last-change-entry }}
-          # yamllint disable-line rule:line-length
-          tag_name: $\{\{ steps.get-changelog-info.outputs.last-change-version-v }}
-          name: $\{\{ steps.get-changelog-info.outputs.last-change-version-v }}
+          # yamllint disable rule:line-length
+          body: '{%raw%}${{ steps.get-changelog-info.outputs.last-change-entry }}{%endraw%}'
+          tag_name: '{%raw%}${{ steps.get-changelog-info.outputs.last-change-version-v }}{%endraw%}'
+          name: '{%raw%}${{ steps.get-changelog-info.outputs.last-change-version-v }}{%endraw%}'
           draft: false
           prerelease: false
+          # yamllint enable rule:line-length
