chore: only run labeler on push to main

--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -3,8 +3,7 @@ name: ♻️ Sync Labels
 
 # yamllint disable-line rule:truthy
 on:
-  workflow_dispatch:
-  pull_request:
+  push:
     branches:
       - main
 
