chore: return to label sync in PRs (for testing permissions)

--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -6,6 +6,10 @@ on:
   push:
     branches:
       - main
+  # useful for testing without needing to merge
+  pull_request:
+    branches:
+      - main
 
 permissions:
   issues: write
