fix: use CHANGESETS_TOKEN with sync-labels action

--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -27,3 +27,4 @@ jobs:
         with:
           config-file: .github/labels.json
           clean-labels: true
+          token: ${{ secrets.CHANGESETS_TOKEN }}
