--- a/{{cookiecutter.project_slug}}/.github/workflows/sync-labels.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/sync-labels.yml
@@ -23,3 +23,4 @@ jobs:
         with:
           config-file: .github/labels.json
           clean-labels: true
+          token: '{%raw%}${{ secrets.CHANGESETS_TOKEN }}{%endraw%}'
